# app/Http/Requests/StoreUnitRequest.php
@@ -11,7 +11,7 @@ class StoreUnitRequest extends FormRequest
      */
     public function authorize(): bool
     {
-        return false;
+        return true;
     }
 
     /**
@@ -22,7 +22,10 @@ class StoreUnitRequest extends FormRequest
     public function rules(): array
     {
         return [
-            //
+            'unit_name' => ['required','numeric'],
+            'is_big_unit' => ['sometimes','boolean'],
+            'smallest_unit_id' => ['sometimes','exists:unit'],
+            'smallest_amount' => ['sometimes','numeric']
         ];
     }
 }
