# routes/api.php
@@ -2,12 +2,17 @@
 
 use App\Http\Controllers\api\ApiProductController;
 use App\Http\Controllers\api\ApiTransactionController;
+use App\Http\Controllers\api\ApiUnitController;
 use App\Http\Controllers\ProductController;
 use App\Http\Resources\ProductResource;
 use App\Models\Product;
 use Illuminate\Support\Facades\Route;
 
 Route::resource('products', ApiProductController::class)->only([
+    'index','store','update', 'destroy'
+]);
+
+Route::resource('units', ApiUnitController::class)->only([
     'index','store','update', 'destroy'
 ]);
 
